# zksync-os-server

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml  native-calibration.md  run_6565.sh  run_6566.sh  run_local.sh  versions.json
.github/scripts/: test-configs.sh
.github/workflows/: cargo-audit.yml  ci.yml  docker.yml  release-bins.yml  spec-tests.yaml
docs/src/: README.md  SUMMARY.md
docs/src/guides/: index.md  (+2 more)
genesis/: genesis.json
integration-tests/: Cargo.toml
integration-tests-macros/: Cargo.toml
integration-tests/src/: config.rs  contracts.rs  lib.rs  prover_tester.rs  provider.rs
integration-tests/tests/: api.rs  call.rs  external_node.rs  interop.rs  mod.rs  prover.rs  restart.rs  tracing.rs
latest/: print.html  searchindex.js  searchindex.json  toc.html  toc.js
lib/batch_types/: Cargo.toml
lib/contract_interface/: Cargo.toml
lib/gas_adjuster/: Cargo.toml
lib/genesis/: Cargo.toml
lib/interop_watcher/: Cargo.toml
lib/l1_watcher/: Cargo.toml
lib/mempool/: Cargo.toml
lib/multivm/: build.rs
lib/network/: Cargo.toml
lib/reth_compat/: Cargo.toml
lib/revm_consistency_checker/: Cargo.toml
lib/rpc/: Cargo.toml
lib/storage_api/: Cargo.toml
lib/storage_fork/: Cargo.toml
lib/storage_fork/src/: lib.rs
lib/types/: Cargo.toml
loadbase/src/: erc20_worker.rs  main.rs  metrics.rs
local-chains/: README.md
local-chains/v30/: config.json
local-chains/v31/: config.json
local-chains/v31.0/: genesis.json  versions.yaml
patches/alloy-evm/: .cargo_vcs_info.json  Cargo.toml
tools/generate-deposit/: Cargo.toml
(+169 files in other folders)
