[package]
name = "zksync_os_storage_fork"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_interface.workspace = true
zksync_os_rpc_api.workspace = true
zksync_os_storage.workspace = true
zksync_os_storage_api.workspace = true
zksync_os_types.workspace = true

alloy = { workspace = true, default-features = false, features = ["eips"] }
anyhow.workspace = true
jsonrpsee = { workspace = true, default-features = false, features = ["client"] }
tokio.workspace = true
tracing.workspace = true
